typescript/checker/tests/conformance/expressions/assignmentOperator/compoundAdditionAssignmentLHSCanBeAssigned.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            33,
        ),
        hi: BytePos(
            34,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/assignmentOperator/compoundAdditionAssignmentLHSCanBeAssigned.ts:4:5
  |
4 | var b: void;
  |     ^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            111,
        ),
        hi: BytePos(
            112,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/assignmentOperator/compoundAdditionAssignmentLHSCanBeAssigned.ts:12:7
   |
12 | x1 += E.a;
   |       ^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            144,
        ),
        hi: BytePos(
            153,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/assignmentOperator/compoundAdditionAssignmentLHSCanBeAssigned.ts:15:7
   |
15 | x1 += undefined;
   |       ^^^^^^^^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            160,
        ),
        hi: BytePos(
            162,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/assignmentOperator/compoundAdditionAssignmentLHSCanBeAssigned.ts:17:5
   |
17 | var x2: string;
   |     ^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            227,
        ),
        hi: BytePos(
            228,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/assignmentOperator/compoundAdditionAssignmentLHSCanBeAssigned.ts:23:7
   |
23 | x2 += E.a;
   |       ^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            260,
        ),
        hi: BytePos(
            269,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/assignmentOperator/compoundAdditionAssignmentLHSCanBeAssigned.ts:26:7
   |
26 | x2 += undefined;
   |       ^^^^^^^^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            276,
        ),
        hi: BytePos(
            278,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/assignmentOperator/compoundAdditionAssignmentLHSCanBeAssigned.ts:28:5
   |
28 | var x3: number;
   |     ^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            312,
        ),
        hi: BytePos(
            313,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/assignmentOperator/compoundAdditionAssignmentLHSCanBeAssigned.ts:31:7
   |
31 | x3 += E.a;
   |       ^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            335,
        ),
        hi: BytePos(
            344,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/assignmentOperator/compoundAdditionAssignmentLHSCanBeAssigned.ts:33:7
   |
33 | x3 += undefined;
   |       ^^^^^^^^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            351,
        ),
        hi: BytePos(
            353,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/assignmentOperator/compoundAdditionAssignmentLHSCanBeAssigned.ts:35:5
   |
35 | var x4: E;
   |     ^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            382,
        ),
        hi: BytePos(
            383,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/assignmentOperator/compoundAdditionAssignmentLHSCanBeAssigned.ts:38:7
   |
38 | x4 += E.a;
   |       ^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            405,
        ),
        hi: BytePos(
            414,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/assignmentOperator/compoundAdditionAssignmentLHSCanBeAssigned.ts:40:7
   |
40 | x4 += undefined;
   |       ^^^^^^^^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            421,
        ),
        hi: BytePos(
            423,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/assignmentOperator/compoundAdditionAssignmentLHSCanBeAssigned.ts:42:5
   |
42 | var x5: boolean;
   |     ^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            448,
        ),
        hi: BytePos(
            450,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/assignmentOperator/compoundAdditionAssignmentLHSCanBeAssigned.ts:45:5
   |
45 | var x6: {};
   |     ^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            480,
        ),
        hi: BytePos(
            482,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/assignmentOperator/compoundAdditionAssignmentLHSCanBeAssigned.ts:49:5
   |
49 | var x7: void;
   |     ^^

